# ATENEA

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  log.md  oportunidades.md  prompt.md  pyproject.toml  requirements.txt  swot.md
.github/workflows/: ci.yml
archivo/: CONTEXTO.md  GUIA_DESARROLLO.md
archivo/codigo/: pyproject.toml
archivo/codigo/atenea/: __init__.py  cli.py  export.py  ingest.py  storage.py  study.py  utils.py
archivo/codigo/config/: defaults.py  models.py  prompts.py
archivo/datos_ejemplo/: knowledge.json  nefrologia-apuntes.md  project.json  questions.json  source-meta.json
atenea/: __init__.py  advisor.py  ai.py  analyze.py  chunk.py  cli.py  convert.py  extract.py  generate.py  review.py  scoring.py  storage.py  study.py  test_engine.py  tui.py  utils.py  zotero.py
atenea/services/: __init__.py  advisor_service.py  generate_service.py  project_service.py  review_service.py  study_service.py  test_service.py
atenea/ui/: __init__.py  app.py
atenea/web/: __init__.py  app.py  theme.py
atenea/web/components/: header.py  knowledge_graph.py
atenea/web/pages/: about.py  analysis.py  dashboard.py  graph.py  home.py  project.py  test.py
config/: __init__.py  advisor.py  defaults.py  models.py  prompts.py  theme.py
tests/: conftest.py  test_chunk.py  test_generate.py  test_review_service.py  test_scoring.py  test_sm2.py  test_storage.py  test_test_service.py  test_utils.py
